--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,12 @@
 <h2>プロフィール編集</h2>
+<% if @user.errors.any? %>
+  <%= @user.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @user.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+<% end %>
+
 <%= form_with model: @user do |f| %>
 
   <label for="inputName">Name</label>
