--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,3 +1,30 @@
 <%= flash[:notice] %>
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+
+<div class="container">
+  <div class= "row">
+    <div class="mx-auto">
+  <h1>welcome to
+  <i class="fa-solid fa-book"></i>
+  <strong>Bookers</strong>
+  !!
+  </h1>
+
+  <p>In
+  <i class="fa-solid fa-book"></i>
+  <strong>bookers</strong>
+  ,
+  </p>
+
+  <p>you can share and exchange your opinions , inpressions , and emotions</p>
+  <p>about various books!</p>
+
+  <div>
+    <a href = "/users/sign_in">Log in</a>
+  </div>
+
+  <div>
+    <a href = "/users/sign_up">Sign up</a>
+  </div>
+</div>
+</div>
+</div>
