--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,14 +6,37 @@
     <% end %>
   </ul>
 <% end %>
-
+<div class= "container">
+  <div class= "row">
+    <div class= "col">
 <%= render 'users/show', user: current_user %>
+    </div>
 
-<% @books.each do |book| %>
+  <div class= "col">
+      <h2>Books</h2>
 
-  <p>投稿ユーザー画像：<%= image_tag book.user.get_profile_image(100,100) %></p>
+<table class= "table">
+  <thead>
+    <tr>
+      <th></th>
+      <th>Title</th>
+      <th>Opinion</th>
+    </tr>
+  </thead>
 
-  <p>Title：<%= book.title %></p>
-  <p>Opinion：<%= book.body %></p>
+  <tbody>
+  <% @books.each do |book| %>
+    <tr>
+      <td><%= link_to image_tag(book.user.get_profile_image(100,100)), user_path(book.user_id) %></td>
+      <td><%= link_to book.title, book_path(book.id) %></td>
+      <td><%= book.body %></td>
+    </tr>
+    <% end %>
+  </tbody>
+
+  </table>
+
+
 </div>
-<% end %>
+</div>
+</div>
