--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,8 @@
-<h1>About</h1>
+
+<div class= "row">
+<h1 class= "mx-auto">Welcome to
+
+<i class="fa-solid fa-book"></i>
+<strong>Bookers!</strong>
+</h1>
+</div>
