--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,11 @@
     <%= yield %>
 
     <footer>
+    <div class= "row">
+    <div class= "mx-auto">
       CopyRight Infratop.inc
+    </div>
+    </div>
     </footer>
   </body>
 </html>
