--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,7 @@
 <%= flash[:notice] %>
+<div class= "container">
+  <div class= "row">
+    <div class= "col">
 <h2>User info</h2>
 <!-- ユーザーの詳細 -->
 <div>
@@ -35,3 +38,28 @@
 
     <%= f.submit 'Create Book' %>
     <% end %>
+</div>
+ <div class= "col">
+      <h2>Books</h2>
+
+<table class= "table">
+  <tbody>
+  <% @books.each do |book| %>
+    <tr>
+      <td><%= link_to image_tag(book.user.get_profile_image(100,100)), user_path(book.user_id) %></td>
+      <td><%= link_to book.title, book_path(book.id) %></td>
+      <td><%= book.body %></td>
+      <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+      <td>
+        <% if @user == current_user %>
+          <%= link_to "Destroy", book_path(book), method: :delete, "data-confirm" => "本当に消しますか？" %>
+          <% end %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+
+  </table>
+
+</div>
+</div>
