--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,67 @@
 <%= flash[:notice] %>
+
+<div class= "container">
+  <div class= "row">
+    <div class= "col">
+<h2>User info</h2>
+<!-- ユーザーの詳細 -->
 <div>
-  <p><%= @book.title %></p>
-  <p><%= @book.body %></p>
-  <p><%= @book.user.name %></p>
+  <%= image_tag @book.user.get_profile_image(200,200) %>
+</div>
+
+<table>
+  <thead>
+    <th>name</th>
+    <th>introduction</th>
+  </thead>
+
+  <tbody>
+    <tr>
+      <td><%= @book.user.name %></td>
+      <td><%= @book.user.introduction %></td>
+    </tr>
+
+  </tbody>
+</table>
+
+<% if @user == current_user %>
+    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+  <% end %>
+
+<h1>New book</h1>
+<%= form_with model: Book.new do |f| %>
+
+    <h4>Title</h4>
+      <%= f.text_field :title %>
+
+    <h4>Opinion</h4>
+      <%= f.text_area :body %>
+
+    <%= f.submit 'Create Book' %>
+    <% end %>
+    </div>
+
+  <div class= "col">
+      <h2>Book detail</h2>
+<table class= "table">
+   <tbody>
+    <tr>
+      <td><%= link_to image_tag(@book.user.get_profile_image(100,100)), user_path(@book.user_id) %></td>
+      <td><%= link_to @book.title, book_path(@book.id) %></td>
+      <td><%= @book.body %></td>
+      <td>
+        <% if @user == current_user %>
+        <%= link_to "Edit", edit_book_path(@book.id) %>
+        <% end %>
+        </td>
+      <td>
+        <% if @user == current_user %>
+          <%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm" => "本当に消しますか？" %>
+          <% end %>
+      </td>
+    </tr>
+   </tbody>
+</table>
+</div>
+</div>
 </div>
