--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,9 +61,11 @@
     <%= yield %>
 
     <footer>
+    <div class="container">
     <div class= "row">
     <div class= "mx-auto">
       CopyRight Infratop.inc
+    </div>
     </div>
     </div>
     </footer>
