--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,34 @@
-<%= render 'show', user: current_user %>
+<div class= "container">
+  <div class= "row">
+    <div class= "col">
+<%= render 'users/show', user: current_user %>
+    </div>
+
+  <div class= "col">
+      <h2>Books</h2>
+
+<table class= "table">
+  <thead>
+    <tr>
+      <th>image</th>
+      <th>name</th>
+      <th></th>
+    </tr>
+  </thead>
+
+  <tbody>
+  <% @user.each do |user| %>
+    <tr>
+      <td><%= image_tag user.get_profile_image(100,100) %></td>
+      <td><%= user.name %></td>
+      <td><%= link_to "Show", user_path(user) %></td>
+    </tr>
+    <% end %>
+  </tbody>
+
+  </table>
+
+
+</div>
+</div>
+</div>
