--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,7 +49,11 @@
       <td><%= link_to image_tag(book.user.get_profile_image(100,100)), user_path(book.user_id) %></td>
       <td><%= link_to book.title, book_path(book.id) %></td>
       <td><%= book.body %></td>
-      <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+      <td>
+        <% if @user == current_user %>
+        <%= link_to "Edit", edit_book_path(book.id) %>
+        <% end %>
+        </td>
       <td>
         <% if @user == current_user %>
           <%= link_to "Destroy", book_path(book), method: :delete, "data-confirm" => "本当に消しますか？" %>
