--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing Book</h1>
+
 <div class= "error">
 <% if @book.errors.any? %>
   <%= @book.errors.count %>errors prohibited this book from being saved:
@@ -9,20 +9,28 @@
 <% end %>
 </div>
 <%= form_with model: @book, url:book_path(@book.id), method: :patch do |f| %>
-
-<div>
-  <label for= "book_title">Title</label>
-  <%= f.text_field :title %>
+<div class= "container">
+  <div class= "row">
+    <div class= "mx-auto">
+      <h1>Editing Book</h1>
+<div class= "form-group">
+  <label for= "book_title">Title</label><br>
+  <%= f.text_field :title, autofocus: true, id:"inputtitle" %>
 </div>
-<div>
-  <label for= "book_body">Body</label>
-  <%= f.text_area :body %>
+<div class= "form-group">
+  <label for= "book_body">Opinion</label><br>
+  <%= f.text_field :body, autofocus: true, id:"inputopinion" %>
 </div>
-<div class= "text">
+<div class= "form-group">
   <%= f.submit 'Update Book' %>
-<% end %>
 </div>
+
 
 <%= link_to "Show", user_path(@book.user_id) %>
   |
 <%= link_to "Back", '/books' %>
+</div>
+</div>
+</div>
+
+<% end %>
