--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -46,7 +46,9 @@
 <table class= "table">
    <tbody>
     <tr>
-      <td><%= link_to image_tag(@book.user.get_profile_image(100,100)), user_path(@book.user_id) %></td>
+      <td><%= link_to image_tag(@book.user.get_profile_image(100,100)), user_path(@book.user_id) %><br>
+          <%= link_to @book.user.name, user_path(@book.user_id) %>
+      </td>
       <td><%= link_to @book.title, book_path(@book.id) %></td>
       <td><%= @book.body %></td>
       <td>
