--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
               <%= link_to 'Users', users_path, class: 'nav-link text-white' %>
             </li>
             <li class="nav-item">
-              <%= link_to 'Books', books_path(current_user.id), class: 'nav-link text-white' %>
+              <%= link_to 'Books', books_path(@book), class: 'nav-link text-white' %>
             </li>
             <li class="nav-item">
               <%= link_to " Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-white' %>
