--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>プロフィール編集</h2>
+
 <% if @user.errors.any? %>
   <%= @user.errors.count %>errors prohibited this book from being saved:
   <ul>
@@ -8,15 +8,28 @@
 <% end %>
 
 <%= form_with model: @user do |f| %>
+<div class= "container">
+  <div class= "row">
+    <div class= "mx-auto">
+      <h2>User info</h2>
+      <div class= "form-group">
+        <label for= "user_name">Name</label><br>
+        <%= f.text_field :name, autofocus: true, id:"inputName" %>
+      </div>
 
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName" %>
+      <div class= "form-group">
+        <label for= "user_image">Image</label>
+          <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+      </div>
 
-  <label for="inputImage">Image</label>
-  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-
-  <label for="inputIntroduction">Introduction</label>
-  <%= f.text_area :introduction, autofocus: true, id:"inputIntroduction" %>
-
-  <%= f.submit "変更を保存" %>
-<% end %>
+      <div class= "form-group">
+          <label for= "user_introduction">Introduction</label><br>
+            <%= f.text_field :introduction, autofocus: true, id:"inputintroduction" %>
+      </div>
+      <div class= "form-group">
+          <%= f.submit "Update User" %>
+      </div>
+    </div>
+  </div>
+</div>
+      <% end %>
