--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -26,7 +26,7 @@
 </div>
 
 
-<%= link_to "Show", user_path(@book.user_id) %>
+<%= link_to "Show", book_path(@book.id) %>
   |
 <%= link_to "Back", '/books' %>
 </div>
