--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,12 +8,12 @@
 <% end %>
 <div class= "container">
   <div class= "row">
-    <div class= "col">
+    <div class= "col-md-3">
 <%= render 'users/show', user: current_user %>
     </div>
     
   
-  <div class= "col">
+  <div class= "col-md-8 offset-md-1">
       <h2>Books</h2>
 
 <table class= "table">
