--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,13 +4,13 @@
   <div class= "row">
     <div class="mx-auto">
   <h1>welcome to
-  <i class="fa-solid fa-book"></i>
+  <i class="fas fa-book"></i>
   <strong>Bookers</strong>
   !!
   </h1>
 
   <p>In
-  <i class="fa-solid fa-book"></i>
+  <i class="fas fa-book"></i>
   <strong>bookers</strong>
   ,
   </p>
