--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,29 +28,45 @@
             <% if user_signed_in? %>
             <li class="nav-item">
               <li class="nav-item">
-              <%= link_to 'Home', user_path(current_user.id), class: 'nav-link text-white' %>
+              <%= link_to user_path(current_user.id), class: 'nav-link text-white' do%>
+              <i class="fas fa-home"></i>Home
+              <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to 'Users', users_path, class: 'nav-link text-white' %>
+              <%= link_to users_path, class: 'nav-link text-white' do%>
+              <i class="fas fa-users"></i>Users
+              <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to 'Books', books_path(@book), class: 'nav-link text-white' %>
+              <%= link_to books_path(@book), class: 'nav-link text-white' do%>
+              <i class="fas fa-book-open"></i>Books
+              <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to " Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-white' %>
+              <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-white' do%>
+              <i class="fas fa-sign-out-alt"></i>Log out
+              <% end %>
             </li>
             <% else %>
             <li class="nav-item">
-              <%= link_to "Home", root_path, class: 'nav-link text-white' %>
+              <%= link_to root_path, class: 'nav-link text-white' do%>
+              <i class="fas fa-home"></i>Home
+              <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to "About", about_path, class: 'nav-link text-white' %>
+              <%= link_to about_path, class: 'nav-link text-white' do%>
+              <i class="fas fa-link"></i>About
+              <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-white' %>
+              <%= link_to new_user_registration_path, class: 'nav-link text-white' do%>
+              <i class="fas fa-user-plus"></i>Sign up
+              <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to "Log in", new_user_session_path, class: 'nav-link text-white' %>
+              <%= link_to new_user_session_path, class: 'nav-link text-white' do%>
+              <i class="fas fa-sign-in-alt"></i>Log in
+              <% end %>
             </li>
             <% end %>
             </ul>
