--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,10 @@
 <div class= "container">
   <div class= "row">
-    <div class= "col">
+    <div class= "col-md-3">
 <%= render 'users/show', user: current_user %>
     </div>
 
-  <div class= "col">
+  <div class= "col-md-8 offset-md-1">
       <h2>Books</h2>
 
 <table class= "table">
