--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <%= flash[:notice] %>
 <div class= "container">
   <div class= "row">
-    <div class= "col">
+    <div class= "col-md-3">
 <h2>User info</h2>
 <!-- ユーザーの詳細 -->
 <div>
@@ -22,9 +22,10 @@
 
   </tbody>
 </table>
-<% if @user == current_user %>
-    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-  <% end %>
+
+<%= link_to edit_user_path(@user.id), class: 'btn btn-outline-secondary form-control' do %>
+<i class="fas fa-user-cog"></i>
+<% end %>
 
 <h1>New book</h1>
 <%= form_with model: Book.new do |f| %>
@@ -38,7 +39,7 @@
     <%= f.submit 'Create Book' %>
     <% end %>
 </div>
- <div class= "col">
+ <div class= "col-md-8 offset-md-1">
       <h2>Books</h2>
 
 <table class= "table">
